<resources>
    <string name="app_name">TravelChecklist</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="editItem">Edit Item</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update item</string>
    <string name="item_name">Title</string>
    <string name="description_additional_info">Description</string>
    <string name="priority_none">Priority: none</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="who_is_travelling">Who is travelling? 👨‍👩‍👧‍👦</string>
    <string name="male">Male</string>
    <string name="fermale">Fermale</string>
    <string name="babies">Babies</string>
    <string name="kids_toddlers">Kids, Toddlers</string>
    <string name="where_are_you_flying">Where are you flying? 🛩</string>
    <string name="expected_weather">Expected weather ⛅</string>
    <string name="accomodation">Accommodation 🏡</string>
    <string name="planned_activities">Planned activities</string>
    <string name="long_or_short">Is it going to be a long trip?</string>
    <string name="hot">Hot/sunny</string>
    <string name="cold">Cold/rainy</string>
    <string name="hotel">Hotel</string>
    <string name="hostel">Hostel/Guesthouse</string>
    <string name="camping">Camping</string>
    <string name="backpacking">Backpacking</string>
    <string name="fishing">Fishing</string>
    <string name="diving">Diving</string>
    <string name="beach">Beach/sea/cruise</string>
    <string name="work">Business/work</string>
    <string name="goingout">Going out</string>
    <string name="hiking">Hiking</string>
    <string name="skiing">Skiing</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="must_make_selection">Please select at least one item</string>

    <string name="something_went_wrong">Oops, sorry, something went wrong... working on it!</string>
    <string name="generating_list">Generating your list...</string>
    <string name="list_ready">🎉 Your list is ready! 🎉</string>
    <string name="your_lists">Your lists</string>
    <string name="please_input_name">Please, the name cannot be empty</string>
    <string name="please_chose_name">Please, chose a name</string>
    <string name="preparing_your_options">Preparing your options! 🚀</string>
    <string name="app_not_supported_message">Sorry this app version is not supported anymore, please contact the developer.</string>
    <string name="app_not_supported">Version not supported</string>
    <string name="close_app">OK, close app</string>
    <string name="add_new_checklist">Go ahead, add a new checklist!</string>
    <string name="you_don_t_have_a_list_yet">You don\'t have a list, yet 🙁</string>
    <string name="offline">Network not available</string>
    <string name="trying_again">Network not available, trying again in&#160;</string>
    <string name="in_x_seconds">&#160;seconds</string>
    <string name="action_add">Add new list</string>
    <string name="action_love">Love</string>
    <string name="add_list">Add new list</string>
    <string name="confirm_add_new_list">Do you want to add a new list?</string>
    <string name="welcome">Hey, welcome!</string>
    <string name="add_new_card">Add new card</string>
    <string name="card_title">Card title</string>
    <string name="done">Save</string>
    <string name="add_item">Add item</string>
    <string name="edit_card">Edit Card</string>
    <string name="delete_card">Delete card</string>
    <string name="do_you_want_to_delete">Do you want to delete this card?</string>
    <string name="hide_checked">Hide checked items</string>
    <string name="show_checked">Show checked items</string>
    <string name="by_continuing_you_are_indicating_that_you_accept_our_terms_of_service_and_privacy_policy">By continuing you are indicating that you accept our Terms of Service and Privacy Policy</string>
    <string name="delete_list">Delete list</string>
    <string name="confirm_delete_list">Do you want to delete this list?</string>
    <string name="save">Save</string>
    <string name="schedule">Schedule</string>
    <string name="priority_low">Priority: low</string>
    <string name="priority_medium">Priority: medium</string>
    <string name="priority_high">Priority: high</string>
    <string name="title">Title</string>
    <string name="na">###</string>
    <string name="notes">Notes</string>
    <string name="channel_description">Reminders</string>
    <string name="settings">Settings</string>
    <string name="key_theme">key_theme</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="choose_theme">Choose theme</string>
    <string name="foo">Foo</string>
    <string name="default_theme">Default</string>

</resources>
