<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete_24px_white"
        android:title="@string/delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/add"
        android:icon="@drawable/ic_baseline_add_24px"
        android:title="@string/action_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_show_hide_checked"
        android:icon="@drawable/ic_check_box_24px_notifcation"
        android:title="@string/hide_checked"
        app:showAsAction="always" />

    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings_24px"
        android:title="@string/settings"
        app:showAsAction="never" />

</menu>
