<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/who_is_travelling"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ToggleButton
            android:background="@drawable/selector_bg_radio_button"
            android:textColor="@color/selector_text_radio_button"
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/male"
            android:textOn="@string/male"
            />

        <ToggleButton
            android:id="@+id/fermale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/fermale"
            android:textOn="@string/fermale"/>

        <ToggleButton
            android:id="@+id/babies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/babies"
            android:textOn="@string/babies"/>

        <ToggleButton
            android:id="@+id/toddlers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/toddlers"
            android:textOn="@string/toddlers"/>

    </LinearLayout>
</LinearLayout>